text fix agencia

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 Hola, contacto con vosotros porque estoy interesado en presentar mi candidatura para el puesto de <strong>Front-End Developer</strong> que he visto vacante en vuestra web.
                             </p>
                             <p style="padding:20px 0px 0px 0px; margin:0">
-                                Os cuento un poco más sobre mi, me llamo:
+                                Mi nombre es:
                             </p>
                         </td>
                     </tr>
@@ -168,7 +168,7 @@
                                 <tr>
                                     <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
                                         <h1 style="font-size: 48px; font-weight: 400; margin: 0;"> Jordi Flores</h1>
-                                        <h2 style="font-size: 20px; font-weight: 400; margin: 0; color:#ccc">Front-End Developer</h2>
+                                        <h2 style="font-size: 20px; font-weight: 400; margin: 0; color:#ccc">(Front-End Developer)</h2>
                                     </td>
                                 </tr>
                             </table>
@@ -191,12 +191,12 @@
                     <!-- COPY HEADING -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Tengo 39 años y vivo en Sant Joan Despí, una población pegada a Barcelona.</p>
+                            <p style="margin: 0;">Tengo 39 años, y vivo en Sant Joan Despí, una población pegada a la ciudad de Barcelona.</p>
                         </td>
                     </tr>
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Os resumo muy brevemente mi experiencia:</p>
+                            <p style="margin: 0;">Os resumo brevemente mi experiencia:</p>
                         </td>
                     </tr>
                     <tr>
@@ -220,8 +220,8 @@
                     <!-- COPY HEADING -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Desarrollando soluciones multimedia integrales en un Agencia, gracias a ello pude trabajar en multitud de proyectos, para varios clientes de renombre.</p>
-                            <p>Durante este período laboral, mis desarrollos normalmente se basaban en C#, Asp, Less, Javascript, ActionScript 2 y 3(Flash), Sql Server, Html5, PhoneGap...</p>
+                            <p style="margin: 0;">Desarrollando soluciones multimedia integrales en una Agencia de Marketing Digital. Gracias a ello pude trabajar en multitud de proyectos, para varios clientes de renombre.</p>
+                            <p>Durante este período laboral, mis desarrollos normalmente se basaban en C#, Asp, Less, Javascript, ActionScript (Flash), Sql Server, Html5, PhoneGap... y otros tantos</p>
                         </td>
                     </tr>
 
@@ -234,6 +234,7 @@
             </td>
         </tr>
 
+
         <!-- SUPPORT CALLOUT -->
         <tr>
             <td bgcolor="#f4f4f4" align="center" style="padding: 30px 10px 0px 10px;">
@@ -245,33 +246,13 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <!-- HEADLINE -->
                     <tr>
-                        <td bgcolor="#B3E5FC" align="center" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <h2 style="font-size: 20px; font-weight: 400; color: #111111; margin: 0;"></h2>
-                            <p style="margin: 0; ">
-                                <a href="tel:637537351" target="_blank" style="color: #539be2; text-decoration:none"><img src="https://xanisu.github.io/responsive-email-template/images/phone-logo-md.png"> +34 637537351</a>
-                            </p>
+                        <td colspan="2" bgcolor="#ffffff" align="center" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <p style="margin: 0;">Presencia online:</p>
                         </td>
+
                     </tr>
-                </table>
-                <!--[if (gte mso 9)|(IE)]>
-            </td>
-            </tr>
-            </table>
-            <![endif]-->
-            </td>
-        </tr>
-        <!-- SUPPORT CALLOUT -->
-        <tr>
-            <td bgcolor="#f4f4f4" align="center" style="padding: 30px 10px 0px 10px;">
-                <!--[if (gte mso 9)|(IE)]>
-            <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
-            <tr>
-            <td align="center" valign="top" width="600">
-            <![endif]-->
-                <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-                    <!-- HEADLINE -->
                     <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
 
                         </td>
                         <td bgcolor="#ffffff" align="left" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
@@ -320,6 +301,32 @@
             <![endif]-->
             </td>
         </tr>
+        <!-- SUPPORT CALLOUT -->
+        <tr>
+            <td bgcolor="#f4f4f4" align="center" style="padding: 30px 10px 0px 10px;">
+                <!--[if (gte mso 9)|(IE)]>
+            <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
+            <tr>
+            <td align="center" valign="top" width="600">
+            <![endif]-->
+                <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
+                    <!-- HEADLINE -->
+                    <tr>
+                        <td bgcolor="#B3E5FC" align="center" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <h2 style="font-size: 20px; font-weight: 400; color: #111111; margin: 0;"></h2>
+                            <p style="margin: 0; ">
+                                <a href="tel:637537351" target="_blank" style="color: #539be2; text-decoration:none"><img src="https://xanisu.github.io/responsive-email-template/images/phone-logo-md.png"> +34 637537351</a>
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+                <!--[if (gte mso 9)|(IE)]>
+            </td>
+            </tr>
+            </table>
+            <![endif]-->
+            </td>
+        </tr>
         <!-- FOOTER -->
         <tr>
             <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px;">
@@ -329,19 +336,9 @@
             <td align="center" valign="top" width="600">
             <![endif]-->
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-                    <!-- NAVIGATION -->
-                    <tr>
-                        <td bgcolor="#f4f4f4" align="left" style="padding: 30px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
-                            <p style="margin: 0;">
-                                <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">Dashboard</a> -
-                                <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">Billing</a> -
-                                <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">Help</a>
-                            </p>
-                        </td>
-                    </tr>
                     <!-- ADDRESS -->
                     <tr>
-                        <td bgcolor="#f4f4f4" align="center" style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
+                        <td bgcolor="#f4f4f4" align="center" style="padding: 20px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
                             <p style="margin: 0;">Sant Joan Despi (Barcelona) - Spain</p>
                         </td>
                     </tr>
