--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <!-- HIDDEN PREHEADER TEXT -->
     <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-        Front-End Developer position
+        (ɔ◔‿◔)ɔ ♥ Candidato puesto Front-End Developer
     </div>
 
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -149,10 +149,10 @@
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <p style="margin: 0;">
-                                Hola, contacto con vosotros porque estoy interesado en presentar mi candidatura para el puesto de <strong>Front-End Developer</strong> que he visto vacante en vuestra web.
+                                Hola, <br><br>Contacto con vosotros porque estoy interesado en presentar mi candidatura para formar parte del equipo de Audiense.
                             </p>
                             <p style="padding:20px 0px 0px 0px; margin:0">
-                                Mi nombre es:
+                                Mi nombre es
                             </p>
                         </td>
                     </tr>
@@ -191,12 +191,36 @@
                     <!-- COPY HEADING -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Tengo 39 años, y vivo en Sant Joan Despí, una población pegada a la ciudad de Barcelona.</p>
+                            <p style="margin: 0;">Descubrí hace unos días vuestra web, y vuestro proyecto me parece realmente interesante. Casualmente ví que teneis vacante un perfil de desarrollador Front-End en el que creo que encajo muy bien.</p>
                         </td>
                     </tr>
                     <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Os resumo brevemente mi experiencia:</p>
+                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <p style="margin: 0;">Espero que me podáis incluir en el proceso de selección (>‿◠)✌.</p>
+                        </td>
+                    </tr>
+
+                </table>
+                <!--[if (gte mso 9)|(IE)]>
+            </td>
+            </tr>
+            </table>
+            <![endif]-->
+            </td>
+        </tr>
+        <!-- SUPPORT CALLOUT -->
+        <tr>
+            <td bgcolor="#f4f4f4" align="center" style="padding: 30px 10px 0px 10px;">
+                <!--[if (gte mso 9)|(IE)]>
+            <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
+            <tr>
+            <td align="center" valign="top" width="600">
+            <![endif]-->
+                <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
+                    <!-- HEADLINE -->
+                    <tr>
+                        <td colspan="2" bgcolor="#ffffff" align="center" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <p style="margin: 0;">Experience (zipped version):</p>
                         </td>
                     </tr>
                     <tr>
@@ -207,7 +231,7 @@
                     <!-- COPY -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">En este último período, he centrado mi carrera profesional hacía esta capa del desarrollo, que en estos momentos esta viviendo un momento excepcional. </p>
+                            <p style="margin: 0;">En este período, he decidido centrar mi carrera profesional y esfuerzos en esta capa del desarrollo, que en los últimos años ha sufrido un avance exponencial. </p>
                             <p>Mis herramientas de trabajo habituales son Javascript, Ionic 2, Gulp, Sass, Reveal.js, Node.js, Electron.io entre otras.</p>
                         </td>
                     </tr>
@@ -220,20 +244,13 @@
                     <!-- COPY HEADING -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Desarrollando soluciones multimedia integrales en una Agencia de Marketing Digital. Gracias a ello pude trabajar en multitud de proyectos, para varios clientes de renombre.</p>
-                            <p>Durante este período laboral, mis desarrollos normalmente se basaban en C#, Asp, Less, Javascript, ActionScript (Flash), Sql Server, Html5, PhoneGap... y otros tantos</p>
+                            <p style="margin: 0;">Desarrollando soluciones integrales multimedia, en una Agencia de Marketing Digital. Gracias a ello he podido participar en multitud de proyectos, para varios clientes de renombre y con diversidad de herramientas.</p>
+                            <p>Durante este período laboral, estuve usando C#, Asp, Less, Javascript, ActionScript (Flash), Sql Server, Html5, PhoneGap...</p>
                         </td>
                     </tr>
-
                 </table>
-                <!--[if (gte mso 9)|(IE)]>
-            </td>
-            </tr>
-            </table>
-            <![endif]-->
             </td>
         </tr>
-
 
         <!-- SUPPORT CALLOUT -->
         <tr>
@@ -247,7 +264,7 @@
                     <!-- HEADLINE -->
                     <tr>
                         <td colspan="2" bgcolor="#ffffff" align="center" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Presencia online:</p>
+                            <p style="margin: 0;">Más info en:</p>
                         </td>
 
                     </tr>
@@ -315,7 +332,7 @@
                         <td bgcolor="#B3E5FC" align="center" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <h2 style="font-size: 20px; font-weight: 400; color: #111111; margin: 0;"></h2>
                             <p style="margin: 0; ">
-                                <a href="tel:637537351" target="_blank" style="color: #539be2; text-decoration:none"><img src="https://xanisu.github.io/responsive-email-template/images/phone-logo-md.png"> +34 637537351</a>
+                                <a href="tel:637537351" target="_blank" style="color: #000000; font-size: 20px; font-weight:400; text-decoration:none"><img src="https://xanisu.github.io/responsive-email-template/images/phone-logo-md.png"> +34 637537351</a>
                             </p>
                         </td>
                     </tr>
