--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
     <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
         (ɔ◔‿◔)ɔ ♥ Candidato puesto Front-End Developer
     </div>
+    <!-- HIDDEN &zwnj;&nbsp; -->
+    <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
+        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
+    </div>
 
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <!-- LOGO -->
@@ -122,8 +126,9 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
                         <td align="center" valign="top" style="padding: 20px 10px 20px 10px;">
-                            <a href="http://litmus.com" target="_blank">
-                                <img alt="Logo" src="http://jordi-flores.es/img/jordi-flores.png" width="80" height="80" style="display: block; width: 80px; max-width: 80px; min-width: 80px; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;" border="0">
+                            <a href="http://jordi-flores.es" target="_blank">
+                                <img alt="Logo" src="https://xanisu.github.io/responsive-email-template/images/jordi-flores.png" width="80" height="80" style="display: block; width: 80px; max-width: 80px; min-width: 80px; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;"
+                                    border="0">
                             </a>
                         </td>
                     </tr>
