changed links callout

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <!-- LOGO -->
         <tr>
-            <td bgcolor="#539be2" align="center">
+            <td bgcolor="#1b9ba3" align="center">
                 <!--[if (gte mso 9)|(IE)]>
             <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
             <tr>
@@ -201,7 +201,7 @@
                     </tr>
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Espero que me podáis incluir en el proceso de selección (>‿◠)✌.</p>
+                            <p style="margin: 0;">Espero poder estar dentro del proceso de selección (>‿◠)✌.</p>
                         </td>
                     </tr>
 
@@ -256,74 +256,70 @@
                 </table>
             </td>
         </tr>
-
-        <!-- SUPPORT CALLOUT -->
+        <!-- links arrow CALLOUT -->
         <tr>
-            <td bgcolor="#f4f4f4" align="center" style="padding: 30px 10px 0px 10px;">
+            <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px;">
                 <!--[if (gte mso 9)|(IE)]>
             <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
             <tr>
             <td align="center" valign="top" width="600">
             <![endif]-->
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-                    <!-- HEADLINE -->
                     <tr>
-                        <td colspan="2" bgcolor="#ffffff" align="center" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Más info en:</p>
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-
-                        </td>
-                        <td bgcolor="#ffffff" align="left" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                        <td align="center" style="background-color: #ffffff;" bgcolor="#ffffff">
+                            <img src="https://xanisu.github.io/responsive-email-template/images/arrow-up.png" width="46" height="22" style="display: block; border: 0px;" />
                         </td>
                     </tr>
                     <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/linkeding.png" width="20" height="20" />&nbsp;Linkedin </a>
-                        </td>
-
-
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <a href="http://jordi-flores.es" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/world-wide-web-icon_66077-3.png" width="20" height="20" />&nbsp;jordi-flores.es </a>
+                        <td align="center" style=" padding: 35px; background-color: #1b9ba3; border-bottom: 20px solid #48afb5;" bgcolor="#1b9ba3">
+                            <!--[if (gte mso 9)|(IE)]>
+                            <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
+                            <tr>
+                            <td align="center" valign="top" width="600">
+                            <![endif]-->
+                            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;">
+                                <tr>
+                                    <td align="center">
+                                        <table>
+                                            <tr>
+                                                <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/linkeding.png" width="25" height="25" /></a>
+                                                </td>
+                                                <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                                                    <a href="http://jordi-flores.es" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/world-wide-web-icon_66077-3.png" width="25" height="25" /></a>
+                                                </td>
+                                                <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/github-512.png" width="25" height="25" /></a>
+                                                </td>
+                                                <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/stackoverflow-3-xxl-3.png" width="25" height="25" /></a>
+                                                </td>
+                                                <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/Button-Fill-Black-Large.png" width="25" height="25" /></a>
+                                                </td>
+                                                <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/facebook-black-radius-transparent-26.png" width="25" height="25" /></a>
+                                                </td>
+                                                <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/twitter-square-logo-3.png" width="25" height="25" /></a>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                            <!--[if (gte mso 9)|(IE)]>
+                            </td>
+                            </tr>
+                            </table>
+                            <![endif]-->
                         </td>
                     </tr>
-                    <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/github-512.png" width="20" height="20" />&nbsp;Github </a>
-                        </td>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/stackoverflow-3-xxl-3.png" width="20" height="20" />&nbsp;Stackoverflow </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/Button-Fill-Black-Large.png" width="20" height="20" />&nbsp; Codepen</a>
-                        </td>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/facebook-black-radius-transparent-26.png" width="20" height="20" />&nbsp; Facebook</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/twitter-square-logo-3.png" width="20" height="20" />&nbsp; Twitter</a>
-                        </td>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                        </td>
-                    </tr>
-
-
                 </table>
-                <!--[if (gte mso 9)|(IE)]>
-            </td>
-            </tr>
-            </table>
-            <![endif]-->
             </td>
         </tr>
-        <!-- SUPPORT CALLOUT -->
+
+        <!-- phone CALLOUT -->
         <tr>
             <td bgcolor="#f4f4f4" align="center" style="padding: 30px 10px 0px 10px;">
                 <!--[if (gte mso 9)|(IE)]>
@@ -337,7 +333,7 @@
                         <td bgcolor="#B3E5FC" align="center" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <h2 style="font-size: 20px; font-weight: 400; color: #111111; margin: 0;"></h2>
                             <p style="margin: 0; ">
-                                <a href="tel:637537351" target="_blank" style="color: #000000; font-size: 20px; font-weight:400; text-decoration:none"><img src="https://xanisu.github.io/responsive-email-template/images/phone-logo-md.png"> +34 637537351</a>
+                                <a href="tel:637537351" target="_blank" style="color: #000000; font-size:28px; font-weight:400; text-decoration:none"><img src="https://xanisu.github.io/responsive-email-template/images/phone-logo-md.png"> +34 637537351</a>
                             </p>
                         </td>
                     </tr>
