--- a/index.html
+++ b/index.html
@@ -283,25 +283,25 @@
                                         <table>
                                             <tr>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/linkeding.png" width="80" height="80" /></a>
+                                                    <a href="http://jordi-flores.es" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/world-wide-web-icon_66077-3.png" width="50" height="50" /></a>
                                                 </td>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://jordi-flores.es" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/world-wide-web-icon_66077-3.png" width="80" height="80" /></a>
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/linkeding.png" width="50" height="50" /></a>
                                                 </td>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/github-512.png" width="80" height="80" /></a>
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/github-512.png" width="50" height="50" /></a>
                                                 </td>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/stackoverflow-3-xxl-3.png" width="80" height="80" /></a>
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/stackoverflow-3-xxl-3.png" width="50" height="50" /></a>
                                                 </td>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/Button-Fill-Black-Large.png" width="80" height="80" /></a>
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/Button-Fill-Black-Large.png" width="50" height="50" /></a>
                                                 </td>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/facebook-black-radius-transparent-26.png" width="80" height="80" /></a>
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/facebook-black-radius-transparent-26.png" width="50" height="50" /></a>
                                                 </td>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/twitter-square-logo-3.png" width="80" height="80" /></a>
+                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/twitter-square-logo-3.png" width="50" height="50" /></a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -333,7 +333,7 @@
                         <td bgcolor="#B3E5FC" align="center" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <h2 style="font-size: 20px; font-weight: 400; color: #111111; margin: 0;"></h2>
                             <p style="margin: 0; ">
-                                <a href="tel:637537351" target="_blank" style="color: #000000; font-size:28px; font-weight:400; text-decoration:none"><img src="https://xanisu.github.io/responsive-email-template/images/phone-logo-md.png"> +34 637537351</a>
+                                <a href="tel:637537351" target="_blank" style="color: #000000; font-size:40px; font-weight:700; text-decoration:none"><img src="https://xanisu.github.io/responsive-email-template/images/phone-logo-md.png" width="20px" height="20px"> +34 637537351</a>
                             </p>
                         </td>
                     </tr>
