social links actualizados

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <!-- HIDDEN PREHEADER TEXT -->
     <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-        (ɔ◔‿◔)ɔ ♥ Candidato puesto Front-End Developer
+        (ɔ◔‿◔)ɔ ♥ Candidato Front-End Developer
     </div>
     <!-- HIDDEN &zwnj;&nbsp; -->
     <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
@@ -196,7 +196,7 @@
                     <!-- COPY HEADING -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Descubrí hace unos días vuestra web, y vuestro proyecto me parece realmente interesante. Casualmente ví que teneis vacante un perfil de desarrollador Front-End en el que creo que encajo muy bien.</p>
+                            <p style="margin: 0;">Descubrí hace unos días vuestra web, y vuestro proyecto me parece realmente interesante. Casualmente ví que teneis vacante un perfil de desarrollador Front-End en el que creo que puedo encajar muy bien.</p>
                         </td>
                     </tr>
                     <tr>
@@ -225,7 +225,7 @@
                     <!-- HEADLINE -->
                     <tr>
                         <td colspan="2" bgcolor="#ffffff" align="center" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Experience (zipped version):</p>
+                            <p style="margin: 0;">En resumen:</p>
                         </td>
                     </tr>
                     <tr>
@@ -286,22 +286,19 @@
                                                     <a href="http://jordi-flores.es" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/world-wide-web-icon_66077-3.png" width="50" height="50" /></a>
                                                 </td>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/linkeding.png" width="50" height="50" /></a>
+                                                    <a href="https://www.linkedin.com/in/jordi-flores-lopez/" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/linkeding.png" width="50" height="50" /></a>
                                                 </td>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/github-512.png" width="50" height="50" /></a>
+                                                    <a href="https://github.com/xanisu" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/github-512.png" width="50" height="50" /></a>
                                                 </td>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/stackoverflow-3-xxl-3.png" width="50" height="50" /></a>
+                                                    <a href="https://stackoverflow.com/users/6503739/jordi-flores" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/stackoverflow-3-xxl-3.png" width="50" height="50" /></a>
                                                 </td>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/Button-Fill-Black-Large.png" width="50" height="50" /></a>
+                                                    <a href="https://codepen.io/xanisu/" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/Button-Fill-Black-Large.png" width="50" height="50" /></a>
                                                 </td>
                                                 <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/facebook-black-radius-transparent-26.png" width="50" height="50" /></a>
-                                                </td>
-                                                <td style="padding:10px; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                                    <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/twitter-square-logo-3.png" width="50" height="50" /></a>
+                                                    <a href="https://twitter.com/JFlores_I_am" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/twitter-square-logo-3.png" width="50" height="50" /></a>
                                                 </td>
                                             </tr>
                                         </table>
